# reminder

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  logs.yml
alembic/: env.py
alembic/versions/: 53eba8db08bf_add_icloud_uid_and_target_to_scheduled_.py  a1b2c3d4e5f6_add_optional_prayer_names.py  b2c3d4e5f6a7_add_followup_message_id_to_prayer_logs.py  c3d4e5f6a7b8_add_notes_table.py
docs/plans/: 2026-02-25-icloud-bidirectional-sync-design.md  2026-02-25-icloud-sync-plan.md
scripts/: fetch_quran.py
src/: config.py  database.py  main.py
src/bot/: cal_server.py  keyboards.py  scheduler.py  task_scheduler.py
src/bot/handlers/: apple.py  chat.py  notes.py  prayer.py  quran.py  start.py
src/models/: daily_verse.py  note.py  prayer_log.py  scheduled_task.py  user.py
src/repositories/: note_repo.py  prayer_repo.py  task_repo.py  user_repo.py
src/services/: ai.py  apple_calendar.py  ical.py  motivation.py  prayer.py  quran.py  scoring.py  voice.py
src/web/: analytics.py  app.py
src/web/templates/: profile.html  tg_app.html
